fix: fix responsiveness of search bar, favourites header and location page
When the screen is too small, the search icon dissapears and the location page
gets a margin 0 so that theres no 'blue' header color at the top of the page.

--- a/src/components/molecules/searchBar/searchBar.css
+++ b/src/components/molecules/searchBar/searchBar.css
@@ -116,3 +116,9 @@ input[type='text']::placeholder {
 .searchButton:hover {
     cursor: pointer;
 }
+
+@media screen and (max-width: 420px) {
+    .searchButton {
+        display: none;
+    }
+}
